# Napkin

./: .env_example  .gitignore  DIST_README.md  README.md  example.env  notes.md  start_servers.sh
.reuse/: dep5
Docker/: Dockerfile.development  Dockerfile.rest  Dockerfile.sock  build-dev-container.sh  deployment_rest.yaml  deployment_sock.yaml  pyproject.toml  setup_dev.sh  start-dev-container.sh
LICENSES/: BSD-3-Clause.txt
client/: HowToCustomizeACE.txt  README.md  karma.conf.js  local.webpack.config.js  make_tears_highligher.sh  package-lock.json  package.json  run_batch_eval.sh  webpack.config.js
client/assets/: dygraph.css  main.css  tears2_grammar.ohm  tears_grammar.ohm
client/js/: App.vue  BatchEval.vue  EvalContext.js  EventBus.vue  Expressions.js  FileBrowser.vue  FileFormatStream.js  FileFormats.js  GAEditor.vue  LiveData.vue  MainDefOverview.vue  Operators.js  Plot.vue  PlotArea.vue  SignalCanvas.vue  SignalEditor.vue  SignalEditor2.vue  SignalList.vue  Tears.js  TearsParser.js  TearsParser2.js  Unittest.vue  Util.js  batchEvaluate.js  batchEvaluate.mjs  config.js  local.js  main.js  remove_GAEvaluator.vue  remove_GASemantics.vue  remove_TearsParserWrapper.vue  signalcanvas.js  singleEvaluate.mjs  tmp.js
client/js-batch/: EventBus.vue  Expressions.js  Operators.js  README  TearsParser.js  Util.js  batchEvaluate.js  ga1
client/test/: AppTest.js  ExpressionsTest.js  (+11 more)
gaserver/: cached_websrv.js  index.js  launch.json  package.json
notebooks/: diff.html
server/: rest_srv.py  server.py  sock_srv.py  start_server.bat  tears-evaluation-motor.js
(+34 files in other folders)
