[tool.poetry]
name = "napkin"
version = "0.1.0"
description = "Common Python Environment for Napkin Development and Microservice Containers"
authors = ["Daniel Flemström <daniel.flemstrom@mdh.se>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas="~1.1.1"
bottle = "~0.12.18"
flask=""
autobahn = "~20.7.1"
python-dotenv ="~0.15.0"
xlrd="~1.2.0"
pytz="~2020.5"
matplotlib="~3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
